fix: misaligned user modal

--- a/UnShittifySource.theme.css
+++ b/UnShittifySource.theme.css
@@ -44,7 +44,7 @@ If you are discord and wish for this to be taken down, please message me at hell
 }
 
 /* User modal */
-.visual-refresh .panels_c48ade {
+.visual-refresh .panels__5e434 {
 	right: var(--space-xs) !important;
 	left: auto;
 	bottom: var(--space-xs);
